--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "keywords": [],
   "devDependencies": {
-    "browser-sync": "2.27.5",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.25.2",
-    "prettier": "2.4.1"
+    "browser-sync": "^2.28.3",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "prettier": "^2.8.4"
   },
   "author": "Tumi",
   "license": "ISC"
